# wyoming-s2cpp-tts

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  CHANGELOG.md  Dockerfile  README.md  TODO.md  compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
app/: __init__.py  admin_http.py  audio.py  config.py  coordinator.py  counters.py  health.py  lifecycle.py  main.py  metrics.py  observability.py  s2_client.py  smoke_harness.py  smoke_s2cpp.py  version.py  voice_cli.py  voice_discovery.py  voice_import.py  voice_profile.py  voice_schema.py  wyoming_server.py
docs/: ARCHITECTURE.md  CUDA_S2CPP_PLAN.md  HOME_ASSISTANT_SETUP.md  INSTALL.md  NEXT_GOAL_PROMPTS.md  PERFORMANCE_TUNING_RESULTS.md  PHASE_10_END_TO_END_BARGE_IN_PLAN.md  PHASE_10_VOICE_PREVIEW_DISCOVERY_CHECKLIST.md  PHASE_5_5B_REAL_BACKEND_VERIFICATION.md  PHASE_6B1_VERIFICATION.md  PHASE_7A_VERIFICATION.md  PHASE_8B1_LIVE_RUNBOOK.md  PHASE_8B1_LONG_FORM_COMPARISON.md  PHASE_8E1_DEPLOYMENT_HANDOFF.md  PHASE_9B_IMPLEMENTATION_PLAN.md  PHASE_9C_IMPLEMENTATION_PLAN.md  PHASE_9_5_IMPLEMENTATION_PLAN.md  PHASE_9_DEPLOYMENT_HANDOFF.md  PHASE_9_QUEUE_BUSY_TIMEOUT_POLICY.md  RELEASE.md  ROADMAP.md  SECURITY.md  STREAMING_STRIDE_AND_QUANT_BENCHMARKS.md  UNRAID_INSTALL.md  UNRAID_VOICE_IMPORT.md  UPGRADE_ROLLBACK.md  VOICE_PROFILES.md
scripts/: _generate_combined_summary.py  _generate_context_comparison.py  _generate_ctx32_stride_report.py  _generate_q4_combined_report.py  add-s2voice  aggregate_results.py  benchmark_quantization.py  benchmark_realtime_tuning.py  capture_phase_8b1_logs.sh  (+18 more)
(+498 files in other folders)
