[project]
name = "wyoming-s2cpp-tts"
dynamic = ["version"]
description = "Wyoming Protocol TTS server with CUDA-enabled s2.cpp backend"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "sorilo" },
]
keywords = ["wyoming", "tts", "home-assistant", "s2.cpp", "cuda"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "wyoming>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/sorilo/wyoming-s2cpp-tts"
Repository = "https://github.com/sorilo/wyoming-s2cpp-tts"

[tool.setuptools.dynamic]
version = { attr = "app.version.__version__" }

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
